# central-intelligence

./: .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  DEPLOY-DIGITALOCEAN.md  DEPLOY.md  FEATURE-VERIFICATION.md  INTEGRATIONS.md  MANUAL-ACTIONS.md  README.md  docker-compose.yml  project-flow.html  render.yaml  technical-documentation.html  webapp-mockup.html  workflow-documentation.html
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  seed_sprint3.py
backend/alembic/: env.py
backend/alembic/versions/: 5310f9ce275a_add_support_tickets_table.py  6802177b2e45_add_member_notes_table.py  99e593e5b25e_add_sprint3_marketing_tables.py  (+29 more)
backend/app/: config.py  database.py  main.py
backend/scripts/: apply_base_schema.py  backfill_insight_taxonomy_case.py  backfill_lead_entry_date.py  backfill_wgr.py  capture_parity_baseline.py  clear_domain_data.py  dump_wgr_schema.py  push_ghl_lead.py  remap_best_use_case.py  seed_instance.py  seed_instance_profile.py  seed_wgr_watermark.py  simulate_ghl_webhook.py  start-celery-beat.sh  start-celery-worker.sh  trigger-task.sh
backend/tests/: test_analytics_json_extract.py  test_analytics_registry.py  test_analytics_snapshots.py  test_analytics_team.py  test_bulk_load_market_signals.py  test_call_owner_rep_resolution.py  test_error_envelope.py  test_freshness_classify.py  test_overall_insight_coerce.py  test_prompt_context.py  test_recommend.py  test_taxonomy.py  test_trends_evaluate.py  test_wgr_lead_email_merge.py  test_wgr_mapping.py  test_wgr_orphan_fks.py  test_wgr_watermark.py
(+434 files in other folders)
